# chessarbiter

./: .gitignore  CMakeLists.txt  README.md  boost.js  chessman.mdj  data.d.ts  index.js  index.ts  package-lock.json  package.json  string.extensions.js
Help/: 000005.ldb  LOG  LOG.old  MANIFEST-000004
Manual/: 000005.ldb  000008.ldb  000016.ldb  000018.ldb  LOG  LOG.old  MANIFEST-000007  MANIFEST-000017
class/: Board.js  Board.ts  Chessboard.js  Pawns.js  Player.js  Send.js  Send.ts
map/: img.d.ts  img.json
src/: Pawns.cpp  Player.cpp  translate.cpp
thread/: index.js
